--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,8 +17,10 @@ services:
     volumes:
       - .:/app
       - bundle:/app/vendor/bundle
+      - node_modules:/app/node_modules
     depends_on:
       - db
+    tty: true
   db:
     image: postgres:14
     environment:
@@ -34,3 +36,4 @@ services:
 volumes:
   pgdata:
   bundle:
+  node_modules:
