--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,27 @@ services:
     depends_on:
       - db
     tty: true
+    stdin_open: true
+  assets:
+    build:
+      context: .
+    environment:
+      DB_HOST: db
+      DB_PORT: 5432
+      DB_USER: postgres
+      DB_PASS: postgres
+      DB_NAME_DEV: movies_sharing_development
+      DB_NAME_TEST: movies_sharing_test
+      REDIS_URL: redis://redis:6379/1
+    volumes:
+      - .:/app
+      - bundle:/app/vendor/bundle
+      - node_modules:/app/node_modules
+    command:
+      - bin/assets_dev
+    depends_on:
+      - web
+    tty: true
   db:
     image: postgres:14
     environment:
